# ResoManager

./: CMakeLists.txt
src/: display_manager.cpp  gui_gtk.cpp  gui_qt.cpp  main.cpp
